--- a/css/style.css
+++ b/css/style.css
@@ -20,15 +20,18 @@ body {
   background-color: #FAFAFA;
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 .container {
   max-width: 1440px !important;
 }
 
+/* Header */
 header {
-  margin-top: 60px;
+  margin: 60px 0;
   height: 56px;
+  /* border: 1px solid yellow; */
 }
 
 /* Left */
@@ -96,3 +99,206 @@ header {
   background-color: transparent;
   font-weight: 600;
 }
+/* End Header */
+
+/* Ads */
+.ads-container {
+  /* height: 100vh; */
+  height: 564px;
+  /* border: 1px solid blue; */
+}
+
+.price-container {
+  height: 297px;
+  width: 390px;
+  border-radius: 24px;
+  background-color: var(--white);
+}
+
+.info-container {
+  margin: 24px 140px 24px 24px;
+}
+
+.info {
+  width: 223px;
+  height: 123px;
+  margin: 24px 0px 34px;
+}
+
+.rating {
+  height: 27px;
+}
+
+.current-rating {
+  font-weight: 600;
+  color: var(--star-yellow);
+  margin: 0 4px 0 0;
+  padding: 0;
+}
+
+.total-rating {
+  font-weight: 400;
+  color: var(--text-grey);
+}
+
+.title {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.pricelist {
+  color: var(--text-grey);
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.location {
+  font-weight: 400;
+  color: var(--text-grey);
+}
+
+.cta {
+  margin: 24px 0px;
+}
+
+.cta-button-container {
+  width: 226px;
+  height: 56px;
+  padding: 16px 28px;
+  border-radius: 12px;
+  background-color: var(--primary);
+  margin-bottom: 12px;
+}
+
+.cta-button {
+  border: none;
+  color: var(--text-black);
+  background-color: transparent;
+  font-weight: 600;
+}
+
+.cta-info {
+  color: var(--text-grey);
+  font-weight: 400;
+}
+
+.cta-info-text {
+  margin-left: 6px;
+}
+
+.ads-image-container {
+  z-index: -1;
+  position: absolute;
+  margin-left: 80px;
+}
+
+.ads-img {
+  border-radius: 24px;
+  margin-right: 40px;
+}
+/* End Ads */
+
+/* Why Us */
+.benefits-container {
+  height: 460px;
+  margin: 120px 0;
+}
+
+.benefits-title-section {
+  margin-bottom: 41px;
+}
+
+.benefits-title {
+  color: var(--secondary);
+  font-weight: 600;
+  margin: 0 0 6px;
+}
+
+.benefits-subtitle {
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.benefits-section {
+  width: 100%;
+}
+
+.benefits-card {
+  width: 315px;
+  height: 347px;
+  background-color: white;
+  margin: 0 10px;
+  border-radius: 24px;
+  position: relative;
+}
+
+.benefits-icon-container {
+  margin: 24px 0;
+}
+
+.benefits-icon {
+  width: 80px;
+  height: 80px;
+  background-color: rgba(253,200,134,0.5);
+  border-radius: 54px;
+}
+
+.benefits-name {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.benefits-description {
+  font-weight: 400;
+  margin: 12px 24px 54px;
+}
+
+.benefits-button-active-container {
+  /* width: 315p nx; */
+  width: 100%;
+  height: 72px;
+  padding: 16px 28px;
+  position: absolute;
+  bottom: 0;
+  border-radius: 12px 12px 24px 24px;
+  background-color: var(--primary);
+  /* margin-bottom: 12px; */
+}
+
+.benefits-button-container {
+  /* width: 315p nx; */
+  width: 100%;
+  height: 72px;
+  padding: 16px 28px;
+  position: absolute;
+  bottom: 0;
+  border-radius: 12px 12px 24px 24px;
+  background-color: transparent;
+  /* margin-bottom: 12px; */
+}
+
+.benefits-button {
+  border: none;
+  color: var(--text-black);
+  background-color: transparent;
+  font-weight: 600;
+}
+
+/* End Why Us */
+
+/* Popular Restaurant */
+.popular-container {
+  height: 475px;
+  border: 1px solid green;
+}
+
+/* End Popular Restaurant */
+
+/* Based on Location Restaurant */
+.location-container {
+  height: 631px;
+  margin: 120px 0;
+  border: 1px solid aqua;
+}
+
+/* End Based on Location Restaurant */
